--- a/15.10/multistrap.conf
+++ b/15.10/multistrap.conf
@@ -26,7 +26,7 @@ suite=wily-security
 components=main universe
 
 [Blitznote]
-packages=apt apt-transport-https curl signify-linux
+packages=apt apt-transport-https curl signify-linux libc6 libc-bin
 source=https://s.blitznote.com/debs/ubuntu/amd64/
 suite=all/
 components=
