Include bzip2, jq, plzip, runit (for its *chpst*), unzip
Most frequently used programs, which are not marked as "essential".

--- a/16.04/multistrap.conf
+++ b/16.04/multistrap.conf
@@ -8,7 +8,7 @@ aptsources=Ubuntu Ubuntu-Updates Ubuntu-Security
 omitrequired=false
 
 [Ubuntu]
-packages=
+packages=bzip2 jq plzip runit unzip
 source=http://archive.ubuntu.com/ubuntu/
 suite=xenial
 components=main universe
