Regular update, and use shared libcurl-boringssl for apt and curl
This saves spaces and enables ASLR for the curl library.
If the user later decides to pull from s.blitznote.com he/she will get
a curl and apt-transport-https with statically linked libcurl/boringssl
anyway, which won't break things.

--- a/16.04/multistrap.conf
+++ b/16.04/multistrap.conf
@@ -3,7 +3,7 @@ arch=amd64
 noauth=true
 cleanup=true
 directory=/tmp/amd64/target-dir/
-debootstrap=Ubuntu Ubuntu-Updates Ubuntu-Security Blitznote
+debootstrap=Ubuntu Ubuntu-Updates Ubuntu-Security Blitznote Blitznote-Dynamic
 aptsources=Ubuntu Ubuntu-Updates Ubuntu-Security
 omitrequired=false
 
@@ -26,8 +26,15 @@ suite=xenial-security
 components=main universe
 
 [Blitznote]
-packages=apt apt-transport-https curl signify-linux libc6 libc-bin
+packages=apt signify-linux libc6 libc-bin
 source=https://s.blitznote.com/debs/ubuntu/amd64/
 suite=all/
+components=
+omitdebsrc=true
+
+[Blitznote-Dynamic]
+packages=apt-transport-https curl
+source=https://s.blitznote.com/debs/ubuntu/amd64/
+suite=dynamic/
 components=
 omitdebsrc=true
