Alias libcurl3-boringssl as libcurl3
This prevents installation of libcurl3/OpenSSL whenever only 'curl' is
required.

--- a/15.10/multistrap.conf
+++ b/15.10/multistrap.conf
@@ -26,7 +26,7 @@ suite=wily-security
 components=main universe
 
 [Blitznote]
-packages=apt signify-linux libc6 libc-bin
+packages=apt signify-linux libc6 libc-bin libcurl3
 source=https://s.blitznote.com/debs/ubuntu/amd64/
 suite=all/
 components=
