--- a/15.10/multistrap.conf
+++ b/15.10/multistrap.conf
@@ -8,7 +8,7 @@ aptsources=Ubuntu Ubuntu-Updates Ubuntu-Security
 omitrequired=false
 
 [Ubuntu]
-packages=bzip2 jq plzip runit unzip
+packages=bzip2 jq plzip runit unzip gzip libseccomp2 bash sed coreutils findutils grep base-passwd login util-linux locales tzdata hostname libc-bin
 source=http://archive.ubuntu.com/ubuntu/
 suite=wily
 components=main universe
