Install ncurses-base
Binaries from packages that depend on ncurses need this, like nano,
or else this error is thrown even if the corresponding environment
variable had been set:

  Error opening terminal: xterm.

--- a/15.10/multistrap.conf
+++ b/15.10/multistrap.conf
@@ -8,7 +8,7 @@ aptsources=Ubuntu Ubuntu-Updates Ubuntu-Security
 omitrequired=false
 
 [Ubuntu]
-packages=bzip2 jq plzip runit unzip gzip libseccomp2 bash sed coreutils findutils psmisc grep base-passwd login util-linux locales tzdata hostname libc-bin
+packages=bzip2 jq plzip runit unzip gzip libseccomp2 bash sed coreutils findutils psmisc grep base-passwd login util-linux locales tzdata hostname libc-bin ncurses-base
 source=http://archive.ubuntu.com/ubuntu/
 suite=wily
 components=main universe
