--- a/16.04/multistrap.conf
+++ b/16.04/multistrap.conf
@@ -8,7 +8,7 @@ aptsources=Ubuntu Ubuntu-Updates Ubuntu-Security
 omitrequired=false
 
 [Ubuntu]
-packages=bzip2 jq plzip runit unzip gzip libseccomp2 bash sed coreutils findutils psmisc grep base-passwd login util-linux locales tzdata hostname gpgv2 gnupg2
+packages=bzip2 jq plzip runit unzip gzip libseccomp2 bash sed coreutils findutils psmisc grep base-passwd login util-linux locales tzdata hostname gpgv2 gnupg2 ncurses-base
 source=http://archive.ubuntu.com/ubuntu/
 suite=xenial
 components=main universe
