sources: Retain source Blitznote
Needed in case *-dev packages are installed. The user would need to downgrade
to Ubuntu's packages without having our repository set.

--- a/15.10/multistrap.conf
+++ b/15.10/multistrap.conf
@@ -4,7 +4,7 @@ noauth=true
 cleanup=true
 directory=/tmp/amd64/target-dir/
 debootstrap=Ubuntu Ubuntu-Updates Ubuntu-Security Blitznote Blitznote-Dynamic
-aptsources=Ubuntu Ubuntu-Updates Ubuntu-Security
+aptsources=Ubuntu Ubuntu-Updates Ubuntu-Security Blitznote
 omitrequired=false
 
 [Ubuntu]
