--- a/16.04/multistrap.conf
+++ b/16.04/multistrap.conf
@@ -4,7 +4,7 @@ noauth=true
 cleanup=true
 directory=/tmp/amd64/target-dir/
 debootstrap=Ubuntu Ubuntu-Updates Ubuntu-Security Blitznote Blitznote-Dynamic
-aptsources=Ubuntu Ubuntu-Updates Ubuntu-Security
+aptsources=Ubuntu Ubuntu-Updates Ubuntu-Security Blitznote
 omitrequired=false
 
 [Ubuntu]
