Include 'script' from 'bsdutils'
It's needed for tools such as tmux and screen when used within a container.

--- a/16.04/multistrap.conf
+++ b/16.04/multistrap.conf
@@ -14,7 +14,7 @@ suite=xenial
 components=main universe
 
 [Ubuntu-Updates]
-packages=
+packages=bsdutils
 source=http://archive.ubuntu.com/ubuntu/
 suite=xenial-updates
 components=main universe
